--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-/* Alle sidene */
 * {
     box-sizing: border-box;
-    margin: 2px;
+    margin: 0px;
     padding: 0;
 }
 
@@ -9,23 +8,20 @@ body {
     font-family:Arial, Helvetica, sans-serif
 }
 
-#global-header {
-    grid-column: 1 / 4;
-    grid-row: 1 / 2;
-}
-
+/* Mobile first */
 .flex-space-between  {
 
     .flex-menu {
-        padding: 1rem 0 1rem;
+        padding: 1rem;
         list-style: none;
-        display: grid;
+        display: flex;
+        flex-direction: column;
         gap: 1rem;
 
     }
 
     #search-bar {
-        padding: 1rem 0 0;
+        padding: 1rem;
 
         input {
         width: 250px;
@@ -59,18 +55,15 @@ body {
     }
 }
 
-main {
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-
 footer {
     border-top: rgba(0, 0, 0, 0.329);
     border-top-width: 1px;
     border-top-style: solid;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     gap: 2rem;
-    padding: 2rem 0 2rem;
+    padding: 1rem;
+    margin: 20px;
     
     h5, h4{
         font-size: 18px;
@@ -95,7 +88,8 @@ footer {
 
     ul {
         list-style: none;
-        display: grid;
+        display: flex;
+        flex-direction: column;
         gap: 0.5rem;
     }
     
@@ -110,9 +104,11 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: right;
-    padding: 1.5rem;
+    align-items: right;
     background-color: #ccc;
     gap: 2rem;
+    padding: 1.5rem;
+    margin: 20px;
 
     a {
         text-decoration: none;
@@ -125,7 +121,7 @@ footer {
 
 
 .products {
-    padding: 2rem 0 0;
+    padding: 2rem;
 
     div {
         display: grid;
@@ -139,6 +135,11 @@ footer {
     p {
         grid-column: 1/4;
         grid-row: 2/3;
+    }
+
+    a {
+        text-decoration: none;
+        color: black;
     }
 
     #new-product {
@@ -188,29 +189,55 @@ footer {
 }
 
 #categories {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(7, auto);
+    display: flex;
+    flex-direction: column;
     gap: 1rem;
-    padding: 1.5rem 0 1.5rem;
+    padding: 1.5rem;
 
     article {
         border-style: solid;
         border-color: black;
         border-width: 1px;
-        max-width: 100%;
-        min-height: 200px;
+        min-height: 250px;
+        margin: 10px;
+        color: white;
 
         display: flex;
         justify-content: center;
         align-items: center;
     }
-}
+         #category1 {
+            max-width: 100%;
+            background-image: url(bilder/oranges.jpg)
+        }  
+
+        #category2 {
+            max-width: 100%;
+            background-image: url(bilder/raspberries.jpg);
+            }   
+
+        #category3 {
+            max-width: 100%;
+            background-image: url(bilder/blueberries.jpg)
+            } 
+        
+        #category4 {
+            max-width: 100%;
+            background-image: url(bilder/apples.jpg)
+        }
+
+        #category5 {
+            max-width: 100%;
+            background-image: url(bilder/banana.jpg)
+        }
+    }
+
 
 .reviews {
     display: flex;
     flex-wrap:wrap;
     justify-content: left;
+    padding: 2rem;
     gap: 1rem;
 
     h3 {
@@ -224,7 +251,7 @@ footer {
     padding: 1rem;
 
         img {
-            max-width: 120px;
+            max-width: 150px;
         }
 
         .username {
@@ -241,21 +268,26 @@ footer {
 
 /* Checkout.html */
 #user-cart {
+    margin: 10px;
+
+    h1 {
+        font-size: 36px;
+    }
     h2 {
-        padding: 1rem 0 0;
+        padding: 1rem;
         font-weight: bold;
-        font-size: 30px;
+        font-size: 28px;
     }
     article {
-
         img {
-            max-width: 400px;
-            padding: 1rem 0 1rem;
+            max-width: 100%;
         }
     }
 }
 
 #user-info {
+    margin: 20px;
+
     h2 {
         padding: 2rem 0 2rem;
         font-weight: bold;
@@ -263,12 +295,12 @@ footer {
     }
 
     form {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat (5, auto);
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
 
         input {
-            padding: 0.5rem;
+            padding: 1rem;
             width: 400px;
             height: 50px;
         }
@@ -289,11 +321,11 @@ footer {
 }
 
 #user-delivery {
-    
+    margin: 20px;
+
     form {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(3, auto);
+        display: flex;
+        flex-direction: column;
 
         p {
             font-weight: bold;
@@ -305,6 +337,7 @@ footer {
             padding: 1rem;
         }
     }
+
     h2{
         padding: 1rem 0 1rem;
         font-weight: bold;
@@ -314,6 +347,8 @@ footer {
 }
 
 #user-pay {
+    margin: 20px;
+    padding: 0 0 5rem;
     
     h2 {
         padding: 1rem 0 1rem;
@@ -329,9 +364,8 @@ footer {
             padding: 1rem;
             width: 400px;
         }
-
-        span {
-            padding: 2rem 0 0;
+        #totalsum {
+            padding: 1.5rem 0 1rem;
         }
 
         #purchaseButton {
@@ -344,21 +378,29 @@ footer {
         }
     }
 
-    label#newsletter , label#offers-and-news  {
-        display: flex;
+    label#newsletter {
         padding: 1rem 0 0;
-        gap: 1rem;
+        gap: 0.5rem;
+        display: flex;
+    }
+
+    label#offers-and-news {
+        display: flex;
+        gap: 0.5rem;
     }
 }
 
 /* Products.html */
 #breadcrumbs {
+    margin: 20px;
     font-size: 18px;
+
     a {
         font-weight: 100;
         text-decoration: none;
         color: black;
     }
+
     #current-site {
         font-weight: bold;
     }
@@ -366,25 +408,29 @@ footer {
 
 #product-on-display {
     h1 {
-        padding: 1rem 0 0;
+        padding: 1rem;
         font-size: 26px;
     }
-    
+
+    a {
+        text-decoration: none;
+        color: black;
+    }
+
     #brand {
         font-size: 18px;
         font-weight: 100;
         text-decoration: underline;
-        padding: 1rem 0 1rem;
-
+        padding: 1rem;
     }
 
     img {
-       width: 100%;
-       padding: 1rem;
+    width: 100%;
+    padding: 1rem;
     }
 
     p {
-        padding: 0.5rem 0 0.5rem;
+        padding: 1rem;
 
         #color-on-product {
             font-weight: bold;
@@ -394,36 +440,128 @@ footer {
 
 #sim-prod {
     padding: 2rem;
+
     h2 {
         font-size: 28px;
-        padding: 0 0 2rem;
+        padding: 1rem;
+    }
+
+    a {
+        text-decoration: none;
+        color: black;
     }
 
     .product-display {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(2, auto);
-        padding: 1rem 0 2rem;
-        justify-content: space-between;
+        padding: 1rem;
+
         img {
             width: 100%;
-            grid-row: 1/2;
-            padding: 0 0 1.5em;
+            padding: 0 0 1rem;
         }
         p {
-            display: flex;
-            justify-content: right;
-            align-items: center;
-            grid-row: 2/3;
-            grid-column: 1/2;
-        }
-        h3 {
-            display: flex;
-            font-size: 28px;
-            grid-row: 2/3;
-            grid-column: 1/2;
+            padding: 1rem 0 0;
         }
     }
 }
 
+@media screen and (min-width:800px) {
+* {
+    max-width: 1200px;
+    margin: 0px;
+    padding: 0;
+}
+    #grid-container {
+        display: grid;
+        grid-template-columns: 1fr 3fr 1fr;
+        grid-template-rows: repeat(3, auto);
+    }
+    
+    #global-header {
+        grid-column: 1 / 4;
+        grid-row: 1 / 2;
+    }
 
+    .flex-space-between {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: center;
+
+        .flex-menu {
+            flex-direction: row;
+            align-items: center;
+
+            grid-row: 1/2;
+            grid-column: 2/3;
+        }
+        #search-bar {
+
+        }
+    }
+
+    .product-card {
+        max-width: 350px;
+        margin: 1rem;
+    }
+
+    #categories {
+
+        #grid-categories {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: repeat(2, auto);
+        color: white;
+        text-transform: uppercase;
+
+            article {
+                margin: 1px;
+                border: none;
+            }
+
+            #category1 {
+            max-width: 386px;
+            grid-row: 1/2;
+            grid-column: 1/2;
+            background-image: url(bilder/oranges.jpg)
+            }  
+
+            #category2 {
+                max-width: 386px;
+                grid-row: 1/2;
+                grid-column: 2/3;
+                background-image: url(bilder/raspberries.jpg);
+                }   
+
+            #category3 {
+                max-width: 386px;
+                grid-row: 1/2;
+                grid-column: 3/4;
+                background-image: url(bilder/blueberries.jpg)
+                } 
+            
+            #category4 {
+                max-width: 864px;
+                grid-row: 2/3;
+                grid-column: 1/3;
+                background-image: url(bilder/apples.jpg)
+            }
+
+            #category5 {
+                max-width: 300px;
+                grid-row: 2/3;
+                background-image: url(bilder/banana.jpg)
+            }
+        }
+    }
+
+    
+    main {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+    
+    footer {
+        grid-column: 2 / 3;
+        grid-row: 3 / 4;
+    }
+}
